--- a/ui/NewX509.ui
+++ b/ui/NewX509.ui
@@ -99,7 +99,7 @@
          <layout class="QVBoxLayout">
           <item>
            <widget class="QWidget" name="reqWidget" native="true">
-            <layout class="QGridLayout">
+            <layout class="QGridLayout" name="gridLayout1">
              <property name="leftMargin">
               <number>0</number>
              </property>
