--- a/ui/NewX509.ui
+++ b/ui/NewX509.ui
@@ -1594,5 +1594,21 @@
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>selfSignRB</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>authKey</receiver>
+   <slot>setDisabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>372</x>
+     <y>319</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>625</x>
+     <y>172</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
 </ui>
