Windows style changed from windowsvista to modernwindows
From 6.6.3 to 6.7.0
Load the correct style depending on the QT version

--- a/misc/xca.wxs
+++ b/misc/xca.wxs
@@ -131,12 +131,6 @@
             </Component>
         </DirectoryRef>
 
-        <DirectoryRef Id="styles">
-            <Component Id="Cqwindowsvistastyle" Guid="8e3dfb18-9a16-4b94-a5a5-90d9c4cc0038">
-                <File Id="qwindowsvistastyle.dll" Source="styles/qwindowsvistastyle.dll" KeyPath="yes"/>
-            </Component>
-        </DirectoryRef>
-
         <DirectoryRef Id="ApplicationProgramsFolder">
             <Component Id="ApplicationShortcut" Guid="391c2a6f-bfe2-46e3-bcec-0e9413070696">
                 <Shortcut Id="ApplicationStartMenuShortcut"
@@ -172,7 +166,7 @@
             <ComponentRef Id="Cxca.exe" />
             <ComponentRef Id="Cqwindows" />
             <ComponentRef Id="Cqsqlite" />
-            <ComponentRef Id="Cqwindowsvistastyle" />
+            <ComponentRef Id="Cqwindowsstyle" />
             <ComponentRef Id="Clibstdcpp6"/>
             <ComponentRef Id="Clibwinpthread1"/>
             <ComponentRef Id="Clibgcc_s_seh1"/>
